--- a/css/styles.css
+++ b/css/styles.css
@@ -670,10 +670,27 @@ footer {
     font-weight: 300;
     color: #374054;
     margin: 0 0 20px 0; }
+  .gameportfolio img {
+    height: auto;
+    max-width: 100%; }
   .gameportfolio p {
     text-align: center;
     color: #74808a;
     margin: 5px 0 5px 0; }
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  padding-top: 35px;
+  height: 0;
+  overflow: hidden; }
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
 
 /*
     ---------------------------------------
