--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -909,10 +909,31 @@ footer {
         margin: 0 0 20px 0;
     }
 
+    img {
+        height: auto;
+        max-width: 100%;
+    }
+
     p {
         text-align: center;
         color: $text;
         margin: 5px 0 5px 0;
+    }
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
 }
 
